<resources>
    <string name="app_name">Peta Play</string>
    <string name="menu1">Descarga app</string>
    <string name="menu2"></string>
    <string name="menu3"></string>
    <string name="descarga_app">Descarga Apps</string>
    <string name="nombre_aplicacion">nombre aplicación</string>
    <string name="descripcion">descripción</string>
    <string name="nombre_desarrollador">nombre desarrollador</string>
    <string name="estado">estado</string>
    <string name="btndescarga">Instalar</string>
    <string name="descargando_aplicacion">Descargando Aplicacion</string>
    <string name="descargando">Descargando</string>
    <string name="descarga_completa">Descarga Completa</string>
    <string name="descarga_completa_largo">Se ha completado la descarga de</string>
    <string name="descargado">Descargada</string>
    <string name="instalada">Instalada</string>
    <string name="por_actualizar">Por actualizar</string>
    <string name="actualizada">Actualizada</string>
    <string name="noinstalada">No instalada</string>
    <string name="aplicacionrepetida">Aplicacion ya instalada</string>
    <string name="lista_vacia">No hay apps instaladas</string>
    <string name="descarga_comleta">Descarga completa</string>
    <string name="descargada">descargada</string>
    <string name="capos_obligatorios">Los campos son obligatorios</string>
    <string name="editar_detalle">Modificar descripción</string>
    <string name="desinstalar">Desinstalar</string>
    <string name="abrir">Abrir</string>
    <string name="actualizar">Actualizar</string>
    <string name="url">http://yahoo.com/</string> <!-- tiene que se un URL COMPLETO -->
    <string name="delete_app">Desinstalar aplicación</string>
    <string name="Desinstalar_pregunta">¿Desea borrar %s?</string>
    <string name="borrado_completo">Borrado terminado</string>
    <string name="borrado">Borrado</string>
    <string name="borrado_completo_largo">Se termino de borrar</string>
    <string name="actualizando_aplicacion">Actualizando Aplicación</string>
    <string name="actualizando">Actualizando</string>
    <string name="actualizacion_completa">Actualización completa</string>
    <string name="actualizada_completa_largo">Se termino de actualizar</string>
    <string name="aplicacion_desconicida">Aplicación desconocida</string>
    <string name="editando_aplicacion">Editando Aplicación</string>
    <string name="editada">Editada</string>
    <string name="edicion_completa">Edición completa</string>
    <string name="edicion_completa_largo">Se termino de Editar</string>
    <string name="Actualizada">Actualizada</string>
    <string name="desinstalada">Desinstalada</string>
</resources>
